@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon  id="net.rieter.xot"
-        version="4.1.7.40"
+        version="4.1.7.41"
         name="Retrospect"
         provider-name="Bas Rieter">
 
@@ -114,7 +114,7 @@
         <description lang="en">Retrospect uses the official websites of a lot of different broadcasting companies (mainly Dutch, Belgian, British and Swedish) to make their re-run episodes available on the Kodi platform. More information can be found at www.rieter.net.[CR][CR]Retrospect reports back usage statistics to our servers. This option can be disabled from the add-on settings.</description>
         <disclaimer lang="en">Retrospect is provided as is. We do not take any responsibility for possible (but highly unlikely) damage cause to your system. Nor do we take responsibility for the content that can be watched via this add-on.</disclaimer>
         <language>en nl de se no lt lv fi</language>
-        <news>[B]Retrospect v4.1.7.40 - Changelog - 2019-01-06[/B]
+        <news>[B]Retrospect v4.1.7.41 - Changelog - 2019-01-08[/B]
 
 [B]Framework related[/B]
 * Changed: keep channels in the "channels" from the beginning.
@@ -126,6 +126,7 @@
 * Changed: moved the "hide channel message" to another tab.
 
 [B]Channel related[/B]
+* Fixed: subs whould not show if InputStream Adaptive is enabled (Fixes #1082)
 * Fixed: RTBF video/audio items did not show.
 * Fixed: json error in Ketnet.be.
 * Added: NPO End-User agreement text.
