@@ -1,4 +1,4 @@
-[B]Retrospect v4.1.7.40 - Changelog - 2019-01-06[/B]
+[B]Retrospect v4.1.7.41 - Changelog - 2019-01-08[/B]
 
 [B]Framework related[/B]
 * Changed: keep channels in the "channels" from the beginning.
@@ -10,6 +10,7 @@
 * Changed: moved the "hide channel message" to another tab.
 
 [B]Channel related[/B]
+* Fixed: subs whould not show if InputStream Adaptive is enabled (Fixes #1082)
 * Fixed: RTBF video/audio items did not show.
 * Fixed: json error in Ketnet.be.
 * Added: NPO End-User agreement text.
